src/style.less
@import url(https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css);
@import url(https://api.fontshare.com/v2/css?f[]=satoshi@1,2&display=swap);

:root {
  --text: #cdd6f4;
  --surface-2: #585b70;
  --surface-1: #45475a;
  --surface-0: #313244;
  --base: #1e1e2e;
  --mantle: #181825;
  --crust: #11111b;
}

body, html {
  background-color: var(--crust);

  width: 100vw;
  height: 100vh;

  margin: 10px;

  display: flex;
  flex-direction: column;

  overflow: hidden;
}


*::-webkit-scrollbar {
  display: none;
}

* {
  -ms-overflow-style: none;
  scrollbar-width: none;

  font-family: 'Satoshi', sans-serif;
  font-weight: 600;

  color: var(--text);
}
.bx {
  font-size: 25px;
}

toolbar {
  width: 100%;
  display: flex;
  gap: 10px;
  margin-bottom: 10px;
  justify-content: center;

  & > div {
    background: var(--base);
    padding: 5px;
    border-radius: 5px;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1), 0 0px 10px rgba(0, 0, 0, 0.1);
    height: 40px!important;
    display: flex;

    app {
      display: flex;
      gap: 10px;
      align-items: center;

      img {
        aspect-ratio: 1 / 1;
        height: 2em;
        border-radius: 40%;
      }
    }
  }
}

window-area {
  position: relative;
  width: calc(100% - 40px);
  margin-left: 20px;
  margin-bottom: 20px;
  height: 100%;
  overflow: hidden;
  

  window {
    background: var(--base);
    display: flex;
    flex-direction: column;
    border-radius: 5px;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2), 0 0px 10px rgba(0, 0, 0, 0.2);
    overflow: hidden;
    border: 1px solid rgba(255, 255, 255, 0.2);
    background: var(--crust);
    transition: .2s opacity, .2s width, .2s height;
  
    window-header {
      height: 20px;
      padding: 7.5px;
      display: flex;
      align-items: center;
      gap: 7.5px;

      img {
        aspect-ratio: 1 / 1;
        height: 1.2em;
        border-radius: 40%;
      }
    }
  
    window-content {
      height: 100%;
      border-radius: 10px 10px 0 0;
      background: var(--mantle);
      overflow: scroll;

      h1 {
        margin-top: 0;
      }
    }
  }
}

launcher {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  top: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 99999999999999999999999;
  width: 100vw;
  height: calc(100vh + 20px);
  gap: 20px;
  transition: .2s opacity, .2s backdrop-filter;

  apps {
    max-height: 70vh;
    padding: 20px;
    margin: 40px;
    display: flex;
    justify-content: center;
    gap: 40px;
    flex-wrap: wrap;

    app {
      justify-content: center;
      display: flex;
      flex-direction: column;
      gap: 10px;
      height: max-content;
      text-align: center;

      img {
        width: 75px;
        border-radius: 40%;
        aspect-ratio: 1 / 1;
      }
    }
  }

  input {
    background: var(--mantle);
    border: 2px solid var(--crust);
    border-radius: 10px;
    padding: 10px;
    width: 300px;
    max-width: 100vw;
    text-align: center;
    transition: border .2s;

    &:focus {
      outline: none;
      border: 2px solid var(--text);
    }
  }
}

